Creating code to enumerate all dialogue acts in the data related to hotel and restaurant.

--- a/NLI_notebook_for_project_evaluation_EMAI.ipynb
+++ b/NLI_notebook_for_project_evaluation_EMAI.ipynb
@@ -1300,6 +1300,44 @@
     {
       "cell_type": "code",
       "source": [
+        "#Code for enumarating all dialogue acts related to restaurants and Hotel.\n",
+        "[act for act in set([act for turn in dataset['train'][:]['turns']\n",
+        "     for acts in turn['dialogue_acts']\n",
+        "     for act in acts['dialog_act']['act_type']]) if (\"Hotel\" in act or \"Restaurant\" in act)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tvIJ-yKiZlBH",
+        "outputId": "7b8400d2-a4fc-441e-f0b2-8e4509cc8593"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Restaurant-Recommend',\n",
+              " 'Restaurant-Inform',\n",
+              " 'Hotel-Select',\n",
+              " 'Hotel-Request',\n",
+              " 'Restaurant-Select',\n",
+              " 'Restaurant-Request',\n",
+              " 'Hotel-NoOffer',\n",
+              " 'Restaurant-NoOffer',\n",
+              " 'Hotel-Recommend',\n",
+              " 'Hotel-Inform']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "dir(dataset['train'])"
       ],
       "metadata": {
@@ -1934,6 +1972,106 @@
           },
           "metadata": {},
           "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#set(dataset['train'][0]['turns']['frames'][6]['service'])#.intersection(set(['restaurant', 'hotel']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "42uDYhdHTf-T",
+        "outputId": "029d979d-1c8f-41f4-f264-e91f1c80581a"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'hotel'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset['train'][0]['turns']['dialogue_acts'][0]['dialog_act']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WNVWc3ZKVUZO",
+        "outputId": "8c983ffb-a079-4b1b-a312-40b6ae16cc97"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'act_type': ['Restaurant-Inform'],\n",
+              " 'act_slots': [{'slot_name': ['area', 'pricerange'],\n",
+              "   'slot_value': ['centre', 'expensive']}]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset['train'][0]['turns']['frames'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cu84440Fgf_t",
+        "outputId": "029cf918-d8b6-4977-f191-d67ac5b45025"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'service': ['restaurant', 'hotel'],\n",
+              " 'state': [{'active_intent': 'find_restaurant',\n",
+              "   'requested_slots': [],\n",
+              "   'slots_values': {'slots_values_name': ['restaurant-area',\n",
+              "     'restaurant-pricerange'],\n",
+              "    'slots_values_list': [['centre'], ['expensive']]}},\n",
+              "  {'active_intent': 'find_hotel',\n",
+              "   'requested_slots': [],\n",
+              "   'slots_values': {'slots_values_name': [], 'slots_values_list': []}}],\n",
+              " 'slots': [{'slot': [],\n",
+              "   'value': [],\n",
+              "   'start': [],\n",
+              "   'exclusive_end': [],\n",
+              "   'copy_from': [],\n",
+              "   'copy_from_value': []},\n",
+              "  {'slot': [],\n",
+              "   'value': [],\n",
+              "   'start': [],\n",
+              "   'exclusive_end': [],\n",
+              "   'copy_from': [],\n",
+              "   'copy_from_value': []}]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
         }
       ]
     },
