Adding code to enumerate all possible slots in the dataset.

--- a/NLI_notebook_for_project_evaluation_EMAI.ipynb
+++ b/NLI_notebook_for_project_evaluation_EMAI.ipynb
@@ -1338,6 +1338,50 @@
     {
       "cell_type": "code",
       "source": [
+        "#Code for enumarating all possible slots in the frames of the dataset related to restaurants or hotels\n",
+        "[slot for slot in set([slots for turn in dataset['train'][:]['turns']\n",
+        "     for frame in turn['frames'] for state in frame['state'] for slots in state['slots_values']['slots_values_name']]) if \"restaurant\" in slot or \"hotel\" in slot]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9gsqUfTLhz61",
+        "outputId": "27b4daf4-eeaa-44e3-fab1-be8398095cd4"
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['restaurant-bookday',\n",
+              " 'hotel-pricerange',\n",
+              " 'restaurant-pricerange',\n",
+              " 'hotel-internet',\n",
+              " 'hotel-name',\n",
+              " 'restaurant-area',\n",
+              " 'hotel-parking',\n",
+              " 'restaurant-food',\n",
+              " 'hotel-stars',\n",
+              " 'hotel-area',\n",
+              " 'hotel-bookday',\n",
+              " 'hotel-bookstay',\n",
+              " 'restaurant-booktime',\n",
+              " 'restaurant-bookpeople',\n",
+              " 'hotel-bookpeople',\n",
+              " 'hotel-type',\n",
+              " 'restaurant-name']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "dir(dataset['train'])"
       ],
       "metadata": {
